# ruel

./: Cargo.toml  README.md  linker.ld  x86_64.json
.cargo/: config.toml
crates/elf/: Cargo.toml
crates/elf/src/: abi.rs  error.rs  lib.rs
crates/limine/: Cargo.toml
crates/limine/src/: lib.rs  limine_ptr.rs
crates/loose-enum/: Cargo.toml
crates/loose-enum/src/: lib.rs
crates/x86_64/: Cargo.toml
crates/x86_64/src/: gdt.rs  idt.rs  instr.rs  lib.rs  paging.rs  reg.rs
lib/: Cargo.toml
lib/src/: lib.rs  syscalls.rs  sysno.rs  sysresult.rs
libs/std/: Cargo.toml
libs/std/src/: clock.rs  framebuffer.rs  lib.rs  process.rs  ps2.rs  sleep.rs  values.rs
libs/sys/: Cargo.toml
libs/sys/src/: lib.rs  syscalls.rs  sysno.rs  sysresult.rs
src/: hcf.rs  linker.rs  main.rs
src/boot/: mod.rs
src/boot/init_process/: elf.rs  mod.rs
src/boot/limine/: mod.rs  raw.rs  req.rs
src/cpu/: gdt.rs  mod.rs  paging.rs
src/cpu/gdt/: mod.rs  raw.rs
src/cpu/idt/: handlers.rs  mod.rs  pic.rs  pit.rs  raw.rs
src/cpu/paging/: address_space.rs  mod.rs  raw.rs
src/cpu/syscall/: handlers.rs  mod.rs
src/global/: allocator.rs  framebuffer.rs  input.rs  mod.rs  processes.rs
src/io/: mod.rs  pci.rs  ps2.rs
src/log/: display.rs  mod.rs  serial.rs
src/mem/: allocator.rs  bump_allocator.rs  mod.rs
src/process/: io_states.rs  mod.rs
src/sync/: cpu_local.rs  mod.rs  mutex.rs  once_lock.rs
src/utility/: array_vec.rs  array_vec_deque.rs  bump_allocator.rs  display.rs  guards.rs  mod.rs  page_list.rs  stable_array_vec.rs  uninit_array.rs  volatile.rs
