[package]
name = "ruel"
version = "0.0.1"
description = "An experimental x86_64 kernel, mainly to learn OS development."
authors = ["Nils Mathieu <contact@nils-mathieu.fr>"]
edition = "2021"
publish = false

[features]
default = ["boot-limine", "debug-serial"]

# Allows the kernel to be booted by a Limine bootloader.
boot-limine = []

# Allows the kernel to print debug messages to the serial port.
debug-serial = []
