[package]
name = "ruel"
version = "0.0.1"
description = "An experimental x86_64 kernel, mainly to learn OS development."
authors = ["Nils Mathieu <contact@nils-mathieu.fr>"]
edition = "2021"
publish = false

[workspace]
resolver = "2"
members = [
    "lib",
    "crates/limine",
    "crates/x86_64",
    "crates/elf",
    "crates/loose-enum",
]

[features]
default = ["boot-limine", "debug-serial", "init-elf"]

# Allows the kernel to be booted by a Limine bootloader.
boot-limine = ["dep:limine"]

# Allows the kernel to load the init process from an ELF file.
init-elf = ["dep:elf"]

# Allows the kernel to print debug messages to the serial port.
debug-serial = []

[dependencies]
ruel-sys = { path = "lib" }

limine = { path = "crates/limine", optional = true }
elf = { path = "crates/elf", optional = true }
x86_64 = { path = "crates/x86_64" }

bitflags = "2"
