[package]
name = "ruel-std"
version = "0.0.1"
authors = ["Nils Mathieu <contact@nils-mathieu.fr>"]
edition = "2021"

[features]
default = ["framebuffer", "sleep", "process", "values"]

framebuffer = []
sleep = []
process = []
values = []

[dependencies]
sys = { package = "ruel-sys", path = "../sys" }
bitflags = "2"
